--- a/carousel/index.html
+++ b/carousel/index.html
@@ -25,24 +25,31 @@
           </b>
           <h2>LISTNR</h2>
           <p> En musik app til dig der gerne vil udvide din musikalske horisont</p>
+          <div class="carousel__actions">
+            <button id="carousel__button--next">Next</button>
+          </div>
         </div>
         <div class="carousel__item">
           <img src="images/2.png" />
           <h1>"Den bedste musik"</h1>
           <p> Vi sørger for at du præsenteres for anmelderrost musik, som du nødvendigvis ikke har hørt før 
           </p>
+          <div class="carousel__actions">
+            <button id="carousel__button--next">Next</button>
+          </div>
         </div>
         <div class="carousel__item">
           <img src="images/3.png" />
           <h1>Vælg din genre</h1>
           <p> Hjælp os med at lære dig at kende ved at deltage i spillet på næste side, eller dyk direkte ned i musik-universet ved at trykke skip</p>
+          <div class="carousel__actions">
+            <button id="carousel__button--prev" onclick="moveToNextSlide">Skip</button>
+            <button id="carousel__button--next" onclick="moveToNextSlide">Next</button>
+          </div>
         </div>
     
     
-        <div class="carousel__actions">
-          <button id="carousel__button--prev">Skip</button>
-          <button id="carousel__button--next">Next</button>
-        </div>
+
       </div>
     </div>
 
