--- a/carousel/index.html
+++ b/carousel/index.html
@@ -11,48 +11,65 @@
     <div class="logo">
       <img src="images/logo.png" alt="logo">
     </div>
-    <div class="connect-button">
+    <div class="connect-button"> <a href="#onboarding">
       <button>Connect</button>
+      </a>
     </div>
   </div>
 </div>
 
-    <div id="onboarding" class="page">
-      <div class="carousel">
-        <div class="carousel__item carousel__item--visible">
-          <img src="images/1.png" />
-          <h1>Velkommen til</h1><b>
-          </b>
-          <h2>LISTNR</h2>
-          <p> En musik app til dig der gerne vil udvide din musikalske horisont</p>
-          <div class="carousel__actions">
-            <button id="carousel__button--next">Next</button>
-          </div>
-        </div>
-        <div class="carousel__item">
-          <img src="images/2.png" />
-          <h1>"Den bedste musik"</h1>
-          <p> Vi sørger for at du præsenteres for anmelderrost musik, som du nødvendigvis ikke har hørt før 
-          </p>
-          <div class="carousel__actions">
-            <button id="carousel__button--next">Next</button>
-          </div>
-        </div>
-        <div class="carousel__item">
-          <img src="images/3.png" />
-          <h1>Vælg din genre</h1>
-          <p> Hjælp os med at lære dig at kende ved at deltage i spillet på næste side, eller dyk direkte ned i musik-universet ved at trykke skip</p>
-          <div class="carousel__actions">
-            <button id="carousel__button--prev" onclick="moveToNextSlide">Skip</button>
-            <button id="carousel__button--next" onclick="moveToNextSlide">Next</button>
-          </div>
-        </div>
-    
-    
-
+<div id="onboarding" class="page">
+  <div class="carousel">
+    <div class="carousel__item ">
+      <img src="images/1.png" />
+      <h1>Velkommen til</h1><b>
+      </b>
+      <h2>LISTNR</h2>
+      <p> En musik app til dig der gerne vil udvide din musikalske horisont</p>
+      <div class="carousel__actions">
+        <a href="#onboarding1">
+          <button id="carousel__button--next">Next</button>
+        </a>
       </div>
     </div>
+  </div>
+</div>
 
-    <script src="app.js"></script>
+<div id="onboarding1" class="page">
+  <div class="carousel">
+    <div class="carousel__item">
+      <img src="images/2.png" />
+      <h1>"Den bedste musik"</h1>
+      <p> Vi sørger for at du præsenteres for anmelderrost musik, som du nødvendigvis ikke har hørt før 
+      </p>
+      <div class="carousel__actions">
+        <a href="#onboarding2">
+          <button id="carousel__button--next">Next</button>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="onboarding2" class="page">
+  <div class="carousel">
+    <div class="carousel__item">
+      <img src="images/3.png" />
+      <h1>Vælg din genre</h1>
+      <p> Hjælp os med at lære dig at kende ved at deltage i spillet på næste side, eller dyk direkte ned i musik-universet ved at trykke skip</p>
+      <div class="carousel__actions-skip">
+        <a href="#">
+        <button id="carousel__button--prev" onclick="moveToNextSlide">Skip</button>
+        </a>
+        <a href="#">
+        <button id="carousel__button--next" onclick="moveToNextSlide">Next</button>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
   </body>
 </html>
